--- a/app/templates/meetings/edit.hbs
+++ b/app/templates/meetings/edit.hbs
@@ -1,2 +1,2 @@
-<MeetingForm @zitting={{@model.zitting}} @publishedResourcesCount={{@model.publishedResourcesCount}}/>
+<MeetingForm @zitting={{@model}}/>
 {{outlet}}
