--- a/app/components/app-chrome.hbs
+++ b/app/components/app-chrome.hbs
@@ -59,6 +59,9 @@
             {{t "attachments.attachments"}}
             (<strong>{{if @documentContainer.attachments.length @documentContainer.attachments.length 0}}</strong>)
           </AuButton>
+          <AuLink @route="agendapoints.revisions" class="au-u-margin-bottom-none"  @skin="button-secondary" @icon="draft" @iconAlignment="left" @model={{@documentContainer.id}}>
+            Versies
+          </AuLink>
         </AuButtonGroup>
       {{else}}
         {{#if (and @toggleUploadAndSave (feature-flag 'attachments'))}}
@@ -71,6 +74,9 @@
               (<strong>{{if @documentContainer.attachments.length @documentContainer.attachments.length 0}}</strong>)
               <span class="au-c-button__tooltip au-c-button__tooltip--bottom">{{t "attachments.saveAndGo"}}</span>
             </AuButton>
+            <AuLink @route="agendapoints.revisions" class="au-u-margin-bottom-none"  @skin="button-secondary" @icon="draft" @iconAlignment="left" @model={{@documentContainer.id}}>
+              Versies
+            </AuLink>
           </AuButtonGroup>
         {{/if}}
       {{/if}}
