--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -545,3 +545,14 @@
     padding: $au-unit-tiny;
   }
 }
+
+// Fix navigation link when buttons are used
+.au-c-button.au-c-list-navigation__link {
+  display: flex;
+  width: 100%;
+  padding: .9rem 1.2rem .9rem  1.6rem;
+  height: auto;
+  text-align: left;
+  border: 0;
+  border-radius: 0;
+}
