only include relevant plugins for intro and outro text

--- a/app/components/zitting-text-document-container.hbs
+++ b/app/components/zitting-text-document-container.hbs
@@ -1,9 +1,11 @@
 <RdfaEditorContainer
-        @profile={{this.profile}}
-        @rdfaEditorInit={{this.rdfaEditorInit}}
-        @editorOptions={{this.editorOptions}}
-        @busy={{@saving}}
-        @busyText={{t "rdfaEditorContainer.saving"}}
-        @prefix={{hash ext="http://mu.semte.ch/vocabularies/ext/"}}
-        @property={{@type}}
+           @profile={{this.profile}}
+           @rdfaEditorInit={{this.rdfaEditorInit}}
+           @editorOptions={{this.editorOptions}}
+           @busy={{@saving}}
+           @busyText={{t "rdfaEditorContainer.saving"}}
+           @prefix={{hash ext="http://mu.semte.ch/vocabularies/ext/"}}
+           @property={{@type}}
+           @plugins={{array 'rdfa-date'}}
+
 />
