create initial version of environment banner which allows you to see the versions of the packages

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,8 +5,12 @@
     "Gelinkt Notuleren"
     (if environmentName (concat " - " environmentName))
   )}}
-{{/let}}
-
-<AuApp>
+  <AuApp>
+  {{#if environmentName}}
+  <EnvironmentBanner @environmentName={{environmentName}}/>
+  {{/if}}
   {{outlet}}
 </AuApp>
+{{/let}}
+
+
