--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -28,6 +28,7 @@
 @import "project/c-onboarding";
 @import 'project/c-editor-preview';
 @import "project/c-template";
+@import "project/c-environment-banner";
 
 
 // PLUGINS
