add application name and version

--- a/app/components/environment-banner.hbs
+++ b/app/components/environment-banner.hbs
@@ -5,6 +5,9 @@
       Environment
       {{@environmentName}}
     </p>
+    <p>
+      Gelinkt Notuleren {{this.applicationVersion}}
+    </p>
     <VersionInformationOverview/>
   </AuToolbarGroup>
 </AuToolbar>
