dont use anchor tag when url is not defined

--- a/app/components/version-information-overview.hbs
+++ b/app/components/version-information-overview.hbs
@@ -20,7 +20,13 @@
       <:body>
         {{#each-in this.packages as |key value|}}
           <tr>
-            <td><AuLinkExternal href={{value.url}}>{{key}}</AuLinkExternal></td>
+            <td>
+              {{#if value.url}}
+              <AuLinkExternal href={{value.url}}>{{key}}</AuLinkExternal>
+              {{else}}
+              {{key}}
+              {{/if}}
+            </td>
             <td>{{value.version}}</td>
             
           </tr>
