--- a/app/templates/regulatory-statements.hbs
+++ b/app/templates/regulatory-statements.hbs
@@ -1,24 +1,1 @@
-{{page-title "reglementaire bijlage"}}
-<AuBodyContainer vocab="http://data.vlaanderen.be/ns/besluit#"
-  prefix="eli: http://data.europa.eu/eli/ontology# prov: http://www.w3.org/ns/prov# mandaat: http://data.vlaanderen.be/ns/mandaat# besluit: http://data.vlaanderen.be/ns/besluit# say:https://say.data.gift/ns/ dct: http://purl.org/dc/terms/ ext:http://mu.semte.ch/vocabularies/ext/">
-  <Rdfa::RdfaEditor
-    class="au-c-rdfa-editor"
-    @editorOptions={{hash
-                        showToggleRdfaAnnotations="true"
-                        showInsertButton=null
-                        showRdfa="true"
-                        showRdfaHighlight="true"
-                        showRdfaHover="true"
-                        showPaper="true"
-                        showSidebar="true"
-                        showToolbarBottom=null
-                    }}
-    @toolbarOptions={{hash
-                        showTextStyleButtons="true"
-                        showListButtons="true"
-                        showIndentButtons="true"
-                    }}
-    @plugins={{array 'article-structure' 'rdfa-toc'}}
-    @rdfaEditorInit={{this.rdfaEditorInit}}
-  />
-</AuBodyContainer>
+{{outlet}}
