--- a/app/templates/inbox/regulatory-statements.hbs
+++ b/app/templates/inbox/regulatory-statements.hbs
@@ -68,13 +68,21 @@
         <AuLabel for="template" @required={{true}}>
           Template
         </AuLabel>
-        <AuInput id="type" />
+        <select id="template" class="au-c-select">
+          <option value="0"></option>
+          <option value="1">Template 1</option>
+          <option value="2">Template 2</option>
+        </select>
       </AuFormRow>
       <AuFormRow @alignment="default">
         <AuLabel for="type" @required={{true}}>
           Type
         </AuLabel>
-        <AuInput id="type" />
+        <select id="type" class="au-c-select">
+          <option value="0"></option>
+          <option value="1">Type 1</option>
+          <option value="2">Type 2</option>
+        </select>
       </AuFormRow>
     </form>
   </Modal.Body>
