--- a/app/templates/inbox/regulatory-statements.hbs
+++ b/app/templates/inbox/regulatory-statements.hbs
@@ -22,8 +22,8 @@
   <table.content as |c|>
     <c.header>
       <AuDataTableThSortable @field="currentVersion.title" @currentSorting={{this.sort}} @label={{t 'inbox.regulatoryStatements.titleLabel'}} />
-      <th><span class="au-c-data-table__header-title">{{t 'inbox.regulatoryStatements.agendaPoint'}}</span></th>
-      <AuDataTableThSortable @field="currentVersion.title" @currentSorting={{this.sort}} @label={{t 'inbox.regulatoryStatements.type'}} />
+      {{!-- <th><span class="au-c-data-table__header-title">{{t 'inbox.regulatoryStatements.agendaPoint'}}</span></th> --}}
+      {{!-- <AuDataTableThSortable @field="currentVersion.title" @currentSorting={{this.sort}} @label={{t 'inbox.regulatoryStatements.type'}} /> --}}
       <AuDataTableThSortable @field="status.label" @currentSorting={{this.sort}} @label={{t 'inbox.regulatoryStatements.statusLabel'}} />
       <AuDataTableThSortable @field="currentVersion.updatedOn" @currentSorting={{this.sort}} @label={{t 'inbox.regulatoryStatements.updatedOnLabel'}} />
     </c.header>
@@ -32,12 +32,12 @@
         <td>
           <AuLink @route="regulatory-statements.edit">Titel reglementaire bijlage</AuLink>
         </td>
-        <td>
+        {{!-- <td>
           <AuLink>Agendapunt 1</AuLink>
         </td>
         <td>
           Belasting
-        </td>
+        </td> --}}
         <td>
           <AuPill @size="small">Ontwerp</AuPill>
         </td>
@@ -69,12 +69,12 @@
           Template
         </AuLabel>
         <select id="template" class="au-c-select">
-          <option value="0"></option>
+          <option value="0">Leeg</option>
           <option value="1">Template 1</option>
           <option value="2">Template 2</option>
         </select>
       </AuFormRow>
-      <AuFormRow @alignment="default">
+      {{!-- <AuFormRow @alignment="default">
         <AuLabel for="type" @required={{true}}>
           Type
         </AuLabel>
@@ -83,7 +83,7 @@
           <option value="1">Type 1</option>
           <option value="2">Type 2</option>
         </select>
-      </AuFormRow>
+      </AuFormRow> --}}
     </form>
   </Modal.Body>
   <Modal.Footer>
