--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -545,3 +545,17 @@
     padding: $au-unit-tiny;
   }
 }
+
+
+// Fix app with environment banner @TODO: rework app component
+.au-c-app--environment {
+  // Fix main container height
+  .au-c-main-container {
+    height: calc(100vh - 92px);
+  }
+
+  // Fix sidebar offset
+  .au-c-meeting-sidebar {
+    top: 14.8rem;
+  }
+}
