--- a/app/templates/inbox/regulatory-statements.hbs
+++ b/app/templates/inbox/regulatory-statements.hbs
@@ -24,7 +24,7 @@
       <AuDataTableThSortable @field="currentVersion.title" @currentSorting={{this.sort}} @label={{t 'inbox.regulatoryStatements.titleLabel'}} />
       {{!-- <th><span class="au-c-data-table__header-title">{{t 'inbox.regulatoryStatements.agendaPoint'}}</span></th> --}}
       {{!-- <AuDataTableThSortable @field="currentVersion.title" @currentSorting={{this.sort}} @label={{t 'inbox.regulatoryStatements.type'}} /> --}}
-      <AuDataTableThSortable @field="status.label" @currentSorting={{this.sort}} @label={{t 'inbox.regulatoryStatements.statusLabel'}} />
+      {{!-- <AuDataTableThSortable @field="status.label" @currentSorting={{this.sort}} @label={{t 'inbox.regulatoryStatements.statusLabel'}} /> --}}
       <AuDataTableThSortable @field="currentVersion.updatedOn" @currentSorting={{this.sort}} @label={{t 'inbox.regulatoryStatements.updatedOnLabel'}} />
     </c.header>
     <tbody>
@@ -38,9 +38,9 @@
         <td>
           Belasting
         </td> --}}
-        <td>
+        {{!-- <td>
           <AuPill @size="small">Ontwerp</AuPill>
-        </td>
+        </td> --}}
         <td>
           31-05-2022
         </td>
@@ -62,14 +62,15 @@
         <AuLabel for="title" @required={{true}}>
           Titel
         </AuLabel>
-        <AuInput id="title" @width="block" />
+        <AuTextarea id="title" @width="block" />
       </AuFormRow>
       <AuFormRow @alignment="default">
         <AuLabel for="template" @required={{true}}>
-          Template
+          Sjabloon
         </AuLabel>
         <select id="template" class="au-c-select">
-          <option value="0">Leeg</option>
+          <option value=""></option>
+          <option value="0">Vrije tekst</option>
           <option value="1">Template 1</option>
           <option value="2">Template 2</option>
         </select>
