--- a/app/components/signatures/publication-confirmation.hbs
+++ b/app/components/signatures/publication-confirmation.hbs
@@ -6,7 +6,7 @@
   class="au-c-modal--publish" as |Modal| >
   <Modal.Body>
     <div class="au-o-grid au-o-grid--flush au-o-grid--fixed">
-      <div class="au-o-grid__item au-u-1-3">
+      <div class="au-o-grid__item au-u-1-3 au-u-hide-on-print">
         <div class="au-c-rdfa-publication-aside">
           <div class="au-o-box">
             <AuAlert @alertIcon="info-circle" @alertTitle={{t "publicationConfirmation.alertFirstPart"}}  @alertSkin="info" @alertSize="small">
@@ -34,7 +34,7 @@
           </div>
         </div>
       </div>
-      <div class="au-o-grid__item au-u-2-3">
+      <div class="au-o-grid__item au-u-2-3 au-u-wide-on-print">
         <div class="au-c-rdfa-publication-holder">
           <div class="au-c-rdfa-publication say-content rdfa-annotations behandeling-preview">
           {{#if (has-block)}}
@@ -48,7 +48,7 @@
     </div>
   </Modal.Body>
   <Modal.Footer>
-    <AuButtonGroup>
+    <AuButtonGroup class="au-u-hide-on-print">
       <AuButton {{on "click" @confirm}}>{{concat (t "publicationConfirmation.confirmButton") @name}}</AuButton>
       <AuButton @skin="secondary" {{on "click" @cancel}}>{{t "publicationConfirmation.cancelButton"}}</AuButton>
     </AuButtonGroup>
