chore(deps)!: bump editor and plugins to latest

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -32,7 +32,8 @@
 
 
 // PLUGINS
-@import "ember-rdfa-editor/custom-components";
+@import "ember-rdfa-editor";
+@import "ember-rdfa-editor-citaten-plugin";
 @import "project/p-annotations"; // @TODO: refactor in ember-rdfa-editor
 
 
